<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.example.grp03.shakeshake.MenuActivity"
    android:gravity="center"
    android:weightSum="1">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
        android:text="@string/play_text"
        android:textSize="40sp"
        android:onClick="btnPlayOnClick"/>

    <Button
        android:id="@+id/btnHighscore"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/highscore_text"
        android:onClick="btnHighscoreOnClick"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnHowToPlay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/howtoplay_text"
        android:textSize="18sp"
        android:onClick="btnHowToPlayOnClick"/>

</LinearLayout>
