<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.grp03.shakeshake.HowToPlayActivity">

    <TextView
        android:id="@+id/textViewHowToTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/howtoplay_text"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewHow"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/how_text"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="btnPlayOnClick"
        android:text="@string/play_text"
        android:textSize="30sp" />

</LinearLayout>
